# NASDAQ-ITCH-OrderBook

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: pages.yml
.wrangler/cache/: pages.json  wrangler-account.json
bridge/: index.js
docs/: benchmarks.md
frontend/: package.json
frontend/app/: page.tsx
include/: bench.hpp  engine.hpp  io_uring_source.hpp  orderbook.hpp  source.hpp  spsc_queue.hpp  strategy.hpp
report/: _headers  about.html  bench.json  engine.js  engine.wasm  index.html  live-native.html  live.html  results.json  strategy.html  theme.css
src/: engine.cpp  main.cpp  orderbook.cpp
tools/: bench.py  build_variants.sh  extract.sh  make_demo.sh  package.sh  probe.js  rank_symbols.py  ranking.txt  shoot.js  slice_itch.py  verify.js  ws_relay.py
wasm/: bindings.cpp  build.sh
